# pathtracer

./: CMakeLists.txt
include/: include.h  model.h  objImport.h  shader.h
resources/shaders/: display.frag  display.vert  fragment.glsl  pathtrace.frag  pathtrace.vert  vertex.glsl
src/: main.cpp  model.cpp  objImport.cpp  shader.cpp
